src.1/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Referred_By2__c</fullName>
        <description>Related field in Sugar</description>
        <label>Referred By2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_from_List__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to remove this lead from the ADR call list</inlineHelpText>
        <label>Remove from List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_to_Pardot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to Pardot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Setter_Secondary_Lead_Source__c</fullName>
        <label>Setter Secondary Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MAAssignmentRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Assignment Rule</label>
        <referenceTo>sma__MAAssignmentRule__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SR_Date_Created__c</fullName>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sub_industry__c</fullName>
        <label>Sub-Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology</fullName>
                </value>
                <value>
                    <fullName>Cosmetic Surgery</fullName>
                </value>
                <value>
                    <fullName>Family Medicine or General Physician</fullName>
                </value>
                <value>
                    <fullName>Pediatrics</fullName>
                </value>
                <value>
                    <fullName>OB/GYN or Womens Health</fullName>
                </value>
                <value>
                    <fullName>Allergy &amp; Immunology</fullName>
                </value>
                <value>
                    <fullName>ENT-Otolaryngology</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Orthopedics</fullName>
                </value>
                <value>
                    <fullName>Bariatric, Metabolic and Weight Health</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>Geriatric Medicine</fullName>
                </value>
                <value>
                    <fullName>Heart and Vascular</fullName>
                </value>
                <value>
                    <fullName>HIV/Infectious Disease</fullName>
                </value>
                <value>
                    <fullName>Internal Medicine</fullName>
                </value>
                <value>
                    <fullName>Medical Spa or Aesthetic Medicine</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>General Surgery</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Pain Management or Physical Medicine or Physiatry</fullName>
                </value>
                <value>
                    <fullName>Podiatry</fullName>
                </value>
                <value>
                    <fullName>Psychiatry or Mental Health or Substance Rehabilitation</fullName>
                </value>
                <value>
                    <fullName>Radiology or Imaging</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>General Dentistry</fullName>
                </value>
                <value>
                    <fullName>Orthodontistry</fullName>
                </value>
                <value>
                    <fullName>Endodontistry</fullName>
                </value>
                <value>
                    <fullName>Pedodontistry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sugar_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sugar ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sugar_Owner_Username__c</fullName>
        <label>Sugar Owner Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opts Lead out of Surveys</description>
        <label>Survey Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top_12__c</fullName>
        <label>Top 12</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24_Short__c</fullName>
        <description>Shows the current local time (without date) for the Lead in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 )
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the local time (without date) for the Lead in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24__c</fullName>
        <description>Shows the current local time for the Lead in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp;
LEFT( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 4 ) &amp; &quot; &quot; &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 )
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the local time for the Lead in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_Lst__c</fullName>
        <description>For internal use of the Local Time App. This field is used in the PLeads tab.

*DO NOT* add it to the lead page layout or lead list views as it does not work.</description>
        <label>Local Time List</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_Short__c</fullName>
        <description>Shows the current local time (without date) for the Lead.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
&quot;Unknown&quot;,
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp;&quot; &quot;&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the local time (without date) for the Lead.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time__c</fullName>
        <description>Shows the current local time for the Lead.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp;
LEFT( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 4 ) &amp; &quot; &quot; &amp;
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp;&quot; &quot;&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the local time for the Lead.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__LT_Info__c</fullName>
        <description>Hidden field used by the Local Time App. Do not add it to the page layouts and list views.</description>
        <inlineHelpText>Hidden field used by the Local Time App. Do not add it to the page layouts and list views.</inlineHelpText>
        <label>LT Info</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_Full__c</fullName>
        <description>Full timezone name.</description>
        <inlineHelpText>Full timezone name.</inlineHelpText>
        <label>Timezone (Full)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_IANA__c</fullName>
        <description>Timezone as defined by Internet Assigned Numbers Authority (IANA).</description>
        <inlineHelpText>Timezone as defined by Internet Assigned Numbers Authority (IANA).</inlineHelpText>
        <label>Timezone (IANA)</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone__c</fullName>
        <description>Current timezone abbreviation (PST, EST,etc..)</description>
        <inlineHelpText>Timezone abbreviation (PST, EST,etc..)</inlineHelpText>
        <label>Timezone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__UTF_Offset__c</fullName>
        <description>Shows the current UTC timezone offset of the Lead. Uses the address information, and in its absence the Phone number field in the calculation.</description>
        <inlineHelpText>Shows the UTC timezone offset of the Lead.</inlineHelpText>
        <label>UTC Offset</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnconvertedAccountId__c</fullName>
        <label>UnconvertedAccountId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnconvertedOpportunityIds__c</fullName>
        <label>UnconvertedOpportunityIds</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X18_Character_ID__c</fullName>
        <description>Gives the 18 Character ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Character ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Email__c</fullName>
        <description>ZoomInfo Email Address for the Lead record.</description>
        <inlineHelpText>ZoomInfo Email Address for the Lead record.</inlineHelpText>
        <label>ZoomInfo Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Industry__c</fullName>
        <description>The Salesforce standard Industry field is only 40 characters in length. As ZoomInfo industries are sometimes longer than this, the ZoomInfo Industry field can hold up to 255 characters.</description>
        <label>ZoomInfo Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Phone__c</fullName>
        <description>ZoomInfo Phone for the Lead record.</description>
        <inlineHelpText>ZoomInfo Phone for the Lead record.</inlineHelpText>
        <label>ZoomInfo Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this value is set to &quot;True&quot;, an incoming Lead with blank fields will be automatically appended with available data by ZoomInfo.</description>
        <inlineHelpText>When this value is set to &quot;True&quot;, an incoming Lead with blank fields will be automatically appended with available data by ZoomInfo.</inlineHelpText>
        <label>ZoomInfo Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zisf__zoom_id__c</fullName>
        <description>ZoomInfo person id, if the data on this object has ever been imported from the ZIDB.
Stored as Long on Solr.</description>
        <label>ZoomInfo ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__zoom_lastupdated__c</fullName>
        <description>Last updated from ZoomInfo timestamp</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <validationRules>
        <fullName>Lead_Description_Too_Long</fullName>
        <active>true</active>
        <description>Limits the Description on the Lead to less than 501 characters</description>
        <errorConditionFormula>LEN( Description ) &gt; 500</errorConditionFormula>
        <errorDisplayField>Description</errorDisplayField>
        <errorMessage>Lead Description should be less than 500 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MicroVertical_Blank</fullName>
        <active>false</active>
        <errorConditionFormula>(ISPICKVAL( Sub_industry__c , &quot;Dermatology&quot; ) || 
ISPICKVAL( Sub_industry__c, &quot;Heart and Vascular&quot; ) || 
ISPICKVAL( Sub_industry__c, &quot;Oncology&quot; ) || 
ISPICKVAL( Sub_industry__c, &quot;Other&quot; )) &amp;&amp; 
ISBLANK( TEXT( Micro_Vertical__c )) &amp;&amp;
NOT( ISCHANGED( Number_of_Active_CI__c )) &amp;&amp; 
NOT( ISCHANGED( Last_ROE_Task_Date__c ))</errorConditionFormula>
        <errorDisplayField>Micro_Vertical__c</errorDisplayField>
        <errorMessage>The Sub-Vertical selected requires a Micro Vertical</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MicroVertical_Specify_Other</fullName>
        <active>true</active>
        <errorConditionFormula>and(ISPICKVAL(Micro_Vertical__c , &quot;Other, Please Specify --&gt;&quot;), ISBLANK(Not_Listed_Speciality__c))</errorConditionFormula>
        <errorDisplayField>Not_Listed_Speciality__c</errorDisplayField>
        <errorMessage>If you selected Other, Please Specify --&gt; you must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_Medical_Conversion</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
IsConverted = true, 
ISPICKVAL(Industry, &quot;Non-Medical&quot;)
)</errorConditionFormula>
        <errorMessage>You cannot convert a Non-Medical Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Owner_Change</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( OwnerId ) &amp;&amp;
Last_Owner_Change__c &gt;= NOW()- 0.0013</errorConditionFormula>
        <errorMessage>You must wait for 1 minute before changing the Lead owner again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_lead_before_convertion</fullName>
        <active>false</active>
        <errorConditionFormula>AND(not(ispickval(Lead_Type__c,&#39;Referral Partner&#39;)),
IsConverted = true, 
    OR ( 
        Company = &#39;&#39;,  
        FirstName = &#39;&#39;, 
        LastName = &#39;&#39;, 
        Email = &#39;&#39;, 
        Phone = &#39;&#39;, 
        ISBLANK(TEXT(Industry)), 
        ISBLANK(TEXT(LeadSource)), 
        Practice_Software__c = &#39;&#39;
    )
)</errorConditionFormula>
        <errorMessage>Please make sure that all the following fields are filled in: Firstname, Lastname, Company, Email, Phone, Vertical, Lead Source, Practice Software.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Sync_Avail_Before_Conv</fullName>
        <active>false</active>
        <description>Validates that the Sync is NOT on the Blacklist prior to converting the lead</description>
        <errorConditionFormula>AND(
  IsConverted = true, 
  ISPICKVAL(Practice_Software__r.SYNC_Availability__c,&quot;Blacklist - DO NOT SELL&quot;)
)</errorConditionFormula>
        <errorMessage>Practice Management Software is not supported. DO NOT SELL!</errorMessage>
    </validationRules>
    <listViews>
        <fullName>ADR_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>ADR Queue</label>
        <queue>ADR_Queue</queue>
        <sharedTo>
            <group>ADR_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ADR_Re_Set</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>SR_Date_Created__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>ADR Re-Set</value>
        </filters>
        <label>ADR Re-Set</label>
        <sharedTo>
            <role>SAE_Manager_5</role>
            <role>SAE_Rep_5</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ADR_Set_Test_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>ADR Dental Round Robin</label>
        <queue>ADR_Dental_Round_Robin</queue>
        <sharedTo>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AE_1_Demandforce_Leads</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4 And 5</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Last_ROE_Task_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>List Upload</value>
        </filters>
        <filters>
            <field>SR_Date_Created__c</field>
            <operation>equals</operation>
            <value>1/27/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>SR_Date_Created__c</field>
            <operation>equals</operation>
            <value>11/18/2013 12:00 AM</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Contacted,No Response,Dead</value>
        </filters>
        <filters>
            <field>LEAD.LAST_ACTIVITY</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>AE 1 - **Leads</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AE_list_30_days_Vision_PM</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Practice_Software__c</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.PHONE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Contacted</value>
        </filters>
        <filters>
            <field>LEAD.INDUSTRY</field>
            <operation>equals</operation>
            <value>Vision</value>
        </filters>
        <filters>
            <field>LEAD.LAST_ACTIVITY</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:31</value>
        </filters>
        <label>AE list: 30 days - Vision - PM</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AE_list_31_days_Vision_PM</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Practice_Software__c</columns>
        <columns>Last_ROE_Task_Date__c</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>Competitor__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.PHONE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Contacted</value>
        </filters>
        <filters>
            <field>LEAD.INDUSTRY</field>
            <operation>equals</operation>
            <value>Vision</value>
        </filters>
        <filters>
            <field>Last_ROE_Task_Date__c</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:31</value>
        </filters>
        <label>AE list: 31 days - Vision - PM</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AE_list_46_days_1_year_Eaglesoft</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Practice_Software__c</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Contacted</value>
        </filters>
        <filters>
            <field>Practice_Software__c</field>
            <operation>equals</operation>
            <value>Eaglesoft</value>
        </filters>
        <filters>
            <field>Last_ROE_Task_Date__c</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:46</value>
        </filters>
        <label>AE list: 46 days - 1 year Eaglesoft</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AE_list_46_days_1_year_GoldDental</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Practice_Software__c</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Contacted</value>
        </filters>
        <filters>
            <field>Practice_Software__c</field>
            <operation>equals</operation>
            <value>GoldDental</value>
        </filters>
        <filters>
            <field>LEAD.LAST_ACTIVITY</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:46</value>
        </filters>
        <label>AE list: 46 days - 1 year GoldDental</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AE_list_46_days_1_year_MyVisionExpres</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Practice_Software__c</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Contacted</value>
        </filters>
        <filters>
            <field>Practice_Software__c</field>
            <operation>equals</operation>
            <value>MyVisionExpress</value>
        </filters>
        <filters>
            <field>LEAD.LAST_ACTIVITY</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:46</value>
        </filters>
        <label>AE list: 46 days - 1 year MyVisionExpres</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AE_list_46_days_1_year_OfficeMate_Ey</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Practice_Software__c</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Contacted</value>
        </filters>
        <filters>
            <field>Practice_Software__c</field>
            <operation>equals</operation>
            <value>OfficeMate (Eyefinity)</value>
        </filters>
        <filters>
            <field>LEAD.LAST_ACTIVITY</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:46</value>
        </filters>
        <label>AE list: 46 days - 1 year OfficeMate (Ey</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AE_list_46_days_1_year_OrthoTrac_Car</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Practice_Software__c</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Contacted</value>
        </filters>
        <filters>
            <field>Practice_Software__c</field>
            <operation>equals</operation>
            <value>OrthoTrac (Carestream)</value>
        </filters>
        <filters>
            <field>LEAD.LAST_ACTIVITY</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:46</value>
        </filters>
        <label>AE list: 46 days - 1 year OrthoTrac (Car</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AE_list_46_days_1_year_QSI</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Practice_Software__c</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Contacted</value>
        </filters>
        <filters>
            <field>Practice_Software__c</field>
            <operation>equals</operation>
            <value>QSI</value>
        </filters>
        <filters>
            <field>LEAD.LAST_ACTIVITY</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:46</value>
        </filters>
        <label>AE list: 46 days - 1 year QSI</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AE_list_46_days_1_year_Revolution_EHR</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Practice_Software__c</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Contacted</value>
        </filters>
        <filters>
            <field>Practice_Software__c</field>
            <operation>equals</operation>
            <value>Revolution EHR</value>
        </filters>
        <filters>
            <field>LEAD.LAST_ACTIVITY</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:46</value>
        </filters>
        <label>AE list: 46 days - 1 year Revolution EHR</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AE_list_46_days_1_year_WinOMS</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Practice_Software__c</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Contacted</value>
        </filters>
        <filters>
            <field>Practice_Software__c</field>
            <operation>equals</operation>
            <value>Win OMS</value>
        </filters>
        <filters>
            <field>LEAD.LAST_ACTIVITY</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:46</value>
        </filters>
        <label>AE list: 46 days - 1 year WinOMS</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AE_list_46_days_DSN</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Practice_Software__c</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Contacted</value>
        </filters>
        <filters>
            <field>Practice_Software__c</field>
            <operation>equals</operation>
            <value>DSN|DentExec|PerioExec|OrthoExec</value>
        </filters>
        <filters>
            <field>LEAD.LAST_ACTIVITY</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:46</value>
        </filters>
        <label>AE list: 46 days - DSN</label>
        <sharedTo/>
    </listViews>
</CustomObject>